# wl-ime

./: .clang-format  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  wlime.1.scd
include/: wlime.h
protocol/: meson.build
src/: main.c  meson.build  wlime.c
subprojects/: munit.wrap
tests/: meson.build  test.c
